infra/services/observability/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana
              readOnly: true
            - name: grafana-datasource
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
            - name: grafana-data
              mountPath: /var/lib/grafana
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            fsGroup: 10001
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 100Mi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 500Mi
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-datasource
          configMap:
            name: grafana-datasource
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc
